--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@linthtml/linthtml": "^0.3.2",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "0.0.1",
-    "@mate-academy/scripts": "^0.7.6",
+    "@mate-academy/scripts": "^0.7.12",
     "@mate-academy/stylelint-config": "0.0.9",
     "colors": "^1.3.3",
     "eslint": "^5.16.0",
@@ -39,5 +39,10 @@
   "mateAcademy": {
     "projectType": "layout"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.5.3",
+    "bootstrap-sass": "^3.4.1",
+    "bootstrap-scss": "^4.5.3",
+    "scss": "^0.2.4"
+  }
 }
