--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   "author": "Mate Academy",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
     "@linthtml/linthtml": "^0.3.2",
     "@mate-academy/eslint-config": "0.0.13",
     "@mate-academy/linthtml-config": "0.0.1",
     "@mate-academy/scripts": "^0.7.12",
     "@mate-academy/stylelint-config": "0.0.9",
+    "babel-polyfill": "^6.26.0",
     "colors": "^1.3.3",
     "eslint": "^5.16.0",
     "eslint-plugin-node": "^9.0.1",
@@ -34,8 +37,16 @@
     "stylelint-scss": "^3.17.2"
   },
   "browserslist": [
-    "last 2 versions"
+    "last 2 Chrome versions",
+    "last 2 Firefox versions"
   ],
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env"
+      ]
+    ]
+  },
   "mateAcademy": {
     "projectType": "layout"
   },
